--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <nav class="site-nav">
         <ul class="list">
           <li class="list-item"><a href="#" class="list-link">Link 1</a></li>
+          <li class="list-item"><a href="#" class="list-link">Link 1</a></li>
           <li class="list-item"><a href="#" class="list-link">Link 2</a></li>
           <li class="list-item"><a href="#" class="list-link">Link 3</a></li>
           <li class="list-item"><a href="#" class="list-link">Link 4</a></li>
