--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
           <li class="list-item"><a href="#" class="list-link">Link 4</a></li>
         </ul>
       </nav>
-    </header>
 
-    <main class="main">
-      <section class="hero-section">...</section>
-    </main>
+      <button>Click!</button>
+    </header>
   </body>
 </html>
