--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="site-nav">
         <ul class="list">
-          <li class="list-item"><a href="#" class="list-link">Link 1</a></li>
+          <li class="list__item"><a href="#" class="list__link">Link 1</a></li>
           <li class="list-item"><a href="#" class="list-link">Link 1</a></li>
           <li class="list-item"><a href="#" class="list-link">Link 2</a></li>
           <li class="list-item"><a href="#" class="list-link">Link 3</a></li>
